{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 556,
  "lineage": "99e2c41c-57e6-c33e-17e3-eb16f5e763ee",
  "resources": [
    {
      "module": "module.alb_mumbai",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:772693223288:loadbalancer/app/mumbai-alb/185d2bbe17ab3e4a",
            "arn_suffix": "app/mumbai-alb/185d2bbe17ab3e4a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mumbai-alb-246994564.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:772693223288:loadbalancer/app/mumbai-alb/185d2bbe17ab3e4a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mumbai-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04ffe91c5cc77e537"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07c42f040c3461ca7"
              },
              {
                "subnet_id": "subnet-0e6ed58f2d26c3a7c"
              }
            ],
            "subnets": [
              "subnet-07c42f040c3461ca7",
              "subnet-0e6ed58f2d26c3a7c"
            ],
            "vpc_id": "vpc-0f4aa5451cd126793",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.alb_mumbai.aws_security_group.alb_sg",
            "module.vpc_mumbai.aws_subnet.public",
            "module.vpc_mumbai.aws_vpc.main",
            "module.vpc_mumbai.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb_mumbai",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:772693223288:listener/app/mumbai-alb/185d2bbe17ab3e4a/e23048c54723cc9d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:772693223288:targetgroup/mumbai-tg/ef0a6f0f8f93cf96",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:772693223288:listener/app/mumbai-alb/185d2bbe17ab3e4a/e23048c54723cc9d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:772693223288:loadbalancer/app/mumbai-alb/185d2bbe17ab3e4a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_mumbai.aws_lb.alb",
            "module.alb_mumbai.aws_lb_target_group.tg",
            "module.alb_mumbai.aws_security_group.alb_sg",
            "module.vpc_mumbai.aws_subnet.public",
            "module.vpc_mumbai.aws_vpc.main",
            "module.vpc_mumbai.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb_mumbai",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:772693223288:targetgroup/mumbai-tg/ef0a6f0f8f93cf96",
            "arn_suffix": "targetgroup/mumbai-tg/ef0a6f0f8f93cf96",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:772693223288:targetgroup/mumbai-tg/ef0a6f0f8f93cf96",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:772693223288:loadbalancer/app/mumbai-alb/185d2bbe17ab3e4a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mumbai-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f4aa5451cd126793"
          },
          "dependencies": [
            "module.vpc_mumbai.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_mumbai",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772693223288:security-group/sg-04ffe91c5cc77e537",
            "description": "Allow HTTP inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ffe91c5cc77e537",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mumbai-alb-sg",
            "name_prefix": "",
            "owner_id": "772693223288",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f4aa5451cd126793"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mumbai.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_mumbai",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772693223288:security-group/sg-0cdabd7872b9901b4",
            "description": "Allow HTTP and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdabd7872b9901b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mumbai-ec2-sg",
            "name_prefix": "",
            "owner_id": "772693223288",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f4aa5451cd126793"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mumbai.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mumbai",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b76ec9007ac0edf",
            "arn": "arn:aws:ec2:ap-south-1:772693223288:elastic-ip/eipalloc-05b76ec9007ac0edf",
            "association_id": "eipassoc-0bf8cf4aed2667a25",
            "domain": "vpc",
            "id": "eipalloc-05b76ec9007ac0edf",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0d6a37bec3b913d33",
            "private_dns": "ip-10-1-0-175.ap-south-1.compute.internal",
            "private_ip": "10.1.0.175",
            "public_dns": "ec2-35-154-104-46.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.104.46",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mumbai-nat-eip"
            },
            "tags_all": {
              "Name": "mumbai-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_mumbai",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772693223288:internet-gateway/igw-0c3ccfbf80ef437ac",
            "id": "igw-0c3ccfbf80ef437ac",
            "owner_id": "772693223288",
            "tags": {
              "Name": "mumbai-igw"
            },
            "tags_all": {
              "Name": "mumbai-igw"
            },
            "vpc_id": "vpc-0f4aa5451cd126793"
          },
          "dependencies": [
            "module.vpc_mumbai.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mumbai",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b76ec9007ac0edf",
            "association_id": "eipassoc-0bf8cf4aed2667a25",
            "connectivity_type": "public",
            "id": "nat-053241866cabf950c",
            "network_interface_id": "eni-0d6a37bec3b913d33",
            "private_ip": "10.1.0.175",
            "public_ip": "35.154.104.46",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e6ed58f2d26c3a7c",
            "tags": {
              "Name": "mumbai-nat"
            },
            "tags_all": {
              "Name": "mumbai-nat"
            }
          },
          "dependencies": [
            "module.vpc_mumbai.aws_eip.nat",
            "module.vpc_mumbai.aws_internet_gateway.igw",
            "module.vpc_mumbai.aws_subnet.public",
            "module.vpc_mumbai.aws_vpc.main",
            "module.vpc_mumbai.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mumbai",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0290d6bf86a17c3a21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-053241866cabf950c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0290d6bf86a17c3a2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mumbai.aws_eip.nat",
            "module.vpc_mumbai.aws_internet_gateway.igw",
            "module.vpc_mumbai.aws_nat_gateway.nat",
            "module.vpc_mumbai.aws_route_table.private",
            "module.vpc_mumbai.aws_subnet.public",
            "module.vpc_mumbai.aws_vpc.main",
            "module.vpc_mumbai.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mumbai",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c3ccfbf80ef437ac",
            "id": "r-rtb-03f22591d388c62d91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03f22591d388c62d9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mumbai.aws_internet_gateway.igw",
            "module.vpc_mumbai.aws_route_table.public",
            "module.vpc_mumbai.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mumbai",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772693223288:route-table/rtb-0290d6bf86a17c3a2",
            "id": "rtb-0290d6bf86a17c3a2",
            "owner_id": "772693223288",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-053241866cabf950c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mumbai-private-rt"
            },
            "tags_all": {
              "Name": "mumbai-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4aa5451cd126793"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mumbai.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mumbai",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772693223288:route-table/rtb-03f22591d388c62d9",
            "id": "rtb-03f22591d388c62d9",
            "owner_id": "772693223288",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c3ccfbf80ef437ac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mumbai-public-rt"
            },
            "tags_all": {
              "Name": "mumbai-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4aa5451cd126793"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mumbai.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mumbai",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d31a5eb13973d9ba",
            "route_table_id": "rtb-0290d6bf86a17c3a2",
            "subnet_id": "subnet-013a2fde8dabbdcec"
          },
          "dependencies": [
            "module.vpc_mumbai.aws_route_table.private",
            "module.vpc_mumbai.aws_subnet.private",
            "module.vpc_mumbai.aws_vpc.main",
            "module.vpc_mumbai.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mumbai",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08748d0dbd2f1c556",
            "route_table_id": "rtb-03f22591d388c62d9",
            "subnet_id": "subnet-0e6ed58f2d26c3a7c"
          },
          "dependencies": [
            "module.vpc_mumbai.aws_route_table.public",
            "module.vpc_mumbai.aws_subnet.public",
            "module.vpc_mumbai.aws_vpc.main",
            "module.vpc_mumbai.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01818ef3b4ab0cb8a",
            "route_table_id": "rtb-03f22591d388c62d9",
            "subnet_id": "subnet-07c42f040c3461ca7"
          },
          "dependencies": [
            "module.vpc_mumbai.aws_route_table.public",
            "module.vpc_mumbai.aws_subnet.public",
            "module.vpc_mumbai.aws_vpc.main",
            "module.vpc_mumbai.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mumbai",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772693223288:subnet/subnet-013a2fde8dabbdcec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013a2fde8dabbdcec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772693223288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mumbai-private-1"
            },
            "tags_all": {
              "Name": "mumbai-private-1"
            },
            "vpc_id": "vpc-0f4aa5451cd126793"
          },
          "dependencies": [
            "module.vpc_mumbai.aws_vpc.main",
            "module.vpc_mumbai.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mumbai",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772693223288:subnet/subnet-0e6ed58f2d26c3a7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6ed58f2d26c3a7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "772693223288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mumbai-public-1"
            },
            "tags_all": {
              "Name": "mumbai-public-1"
            },
            "vpc_id": "vpc-0f4aa5451cd126793"
          },
          "dependencies": [
            "module.vpc_mumbai.aws_vpc.main",
            "module.vpc_mumbai.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772693223288:subnet/subnet-07c42f040c3461ca7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c42f040c3461ca7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "772693223288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mumbai-public-2"
            },
            "tags_all": {
              "Name": "mumbai-public-2"
            },
            "vpc_id": "vpc-0f4aa5451cd126793"
          },
          "dependencies": [
            "module.vpc_mumbai.aws_vpc.main",
            "module.vpc_mumbai.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mumbai",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772693223288:vpc/vpc-0f4aa5451cd126793",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-016a6ea48f8066473",
            "default_route_table_id": "rtb-05e2d96a94506a6f9",
            "default_security_group_id": "sg-0c143221b6272eaa5",
            "dhcp_options_id": "dopt-047a63c88ebd72b59",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f4aa5451cd126793",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05e2d96a94506a6f9",
            "owner_id": "772693223288",
            "tags": {
              "Name": "mumbai-vpc"
            },
            "tags_all": {
              "Name": "mumbai-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_tokyo",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4519520bfbbf35b",
            "arn": "arn:aws:ec2:ap-northeast-1:772693223288:elastic-ip/eipalloc-0e4519520bfbbf35b",
            "association_id": "eipassoc-0ef7e76cdaf0b4a94",
            "domain": "vpc",
            "id": "eipalloc-0e4519520bfbbf35b",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-079a5f49ae85ccfff",
            "private_dns": "ip-10-2-0-165.ap-northeast-1.compute.internal",
            "private_ip": "10.2.0.165",
            "public_dns": "ec2-52-193-243-10.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.193.243.10",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tokyo-nat-eip"
            },
            "tags_all": {
              "Name": "tokyo-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_tokyo",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:772693223288:internet-gateway/igw-02846ab26f795bb49",
            "id": "igw-02846ab26f795bb49",
            "owner_id": "772693223288",
            "tags": {
              "Name": "tokyo-igw"
            },
            "tags_all": {
              "Name": "tokyo-igw"
            },
            "vpc_id": "vpc-0e5f7ae1da33ba8b8"
          },
          "dependencies": [
            "module.vpc_tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tokyo",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4519520bfbbf35b",
            "association_id": "eipassoc-0ef7e76cdaf0b4a94",
            "connectivity_type": "public",
            "id": "nat-05c00cac0d54439f6",
            "network_interface_id": "eni-079a5f49ae85ccfff",
            "private_ip": "10.2.0.165",
            "public_ip": "52.193.243.10",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e231d17c2ea1c9a4",
            "tags": {
              "Name": "tokyo-nat"
            },
            "tags_all": {
              "Name": "tokyo-nat"
            }
          },
          "dependencies": [
            "module.vpc_tokyo.aws_eip.nat",
            "module.vpc_tokyo.aws_internet_gateway.igw",
            "module.vpc_tokyo.aws_subnet.public",
            "module.vpc_tokyo.aws_vpc.main",
            "module.vpc_tokyo.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tokyo",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bf1a57d5a694abc21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05c00cac0d54439f6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf1a57d5a694abc2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_tokyo.aws_eip.nat",
            "module.vpc_tokyo.aws_internet_gateway.igw",
            "module.vpc_tokyo.aws_nat_gateway.nat",
            "module.vpc_tokyo.aws_route_table.private",
            "module.vpc_tokyo.aws_subnet.public",
            "module.vpc_tokyo.aws_vpc.main",
            "module.vpc_tokyo.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tokyo",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02846ab26f795bb49",
            "id": "r-rtb-0742f696e69a940041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0742f696e69a94004",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_tokyo.aws_internet_gateway.igw",
            "module.vpc_tokyo.aws_route_table.public",
            "module.vpc_tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tokyo",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:772693223288:route-table/rtb-0bf1a57d5a694abc2",
            "id": "rtb-0bf1a57d5a694abc2",
            "owner_id": "772693223288",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05c00cac0d54439f6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyo-private-rt"
            },
            "tags_all": {
              "Name": "tokyo-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5f7ae1da33ba8b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tokyo",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:772693223288:route-table/rtb-0742f696e69a94004",
            "id": "rtb-0742f696e69a94004",
            "owner_id": "772693223288",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02846ab26f795bb49",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyo-public-rt"
            },
            "tags_all": {
              "Name": "tokyo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5f7ae1da33ba8b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tokyo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cd9be1521027ffc",
            "route_table_id": "rtb-0bf1a57d5a694abc2",
            "subnet_id": "subnet-0029204ced6f541ad"
          },
          "dependencies": [
            "module.vpc_tokyo.aws_route_table.private",
            "module.vpc_tokyo.aws_subnet.private",
            "module.vpc_tokyo.aws_vpc.main",
            "module.vpc_tokyo.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tokyo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072a0b734a045bf72",
            "route_table_id": "rtb-0742f696e69a94004",
            "subnet_id": "subnet-0e231d17c2ea1c9a4"
          },
          "dependencies": [
            "module.vpc_tokyo.aws_route_table.public",
            "module.vpc_tokyo.aws_subnet.public",
            "module.vpc_tokyo.aws_vpc.main",
            "module.vpc_tokyo.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b67e86bdcd32db3b",
            "route_table_id": "rtb-0742f696e69a94004",
            "subnet_id": "subnet-04068b88c2ddf9887"
          },
          "dependencies": [
            "module.vpc_tokyo.aws_route_table.public",
            "module.vpc_tokyo.aws_subnet.public",
            "module.vpc_tokyo.aws_vpc.main",
            "module.vpc_tokyo.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tokyo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:772693223288:subnet/subnet-0029204ced6f541ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.2.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0029204ced6f541ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772693223288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-private-1"
            },
            "tags_all": {
              "Name": "tokyo-private-1"
            },
            "vpc_id": "vpc-0e5f7ae1da33ba8b8"
          },
          "dependencies": [
            "module.vpc_tokyo.aws_vpc.main",
            "module.vpc_tokyo.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tokyo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:772693223288:subnet/subnet-0e231d17c2ea1c9a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e231d17c2ea1c9a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "772693223288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-public-1"
            },
            "tags_all": {
              "Name": "tokyo-public-1"
            },
            "vpc_id": "vpc-0e5f7ae1da33ba8b8"
          },
          "dependencies": [
            "module.vpc_tokyo.aws_vpc.main",
            "module.vpc_tokyo.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:772693223288:subnet/subnet-04068b88c2ddf9887",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04068b88c2ddf9887",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "772693223288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-public-2"
            },
            "tags_all": {
              "Name": "tokyo-public-2"
            },
            "vpc_id": "vpc-0e5f7ae1da33ba8b8"
          },
          "dependencies": [
            "module.vpc_tokyo.aws_vpc.main",
            "module.vpc_tokyo.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tokyo",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:772693223288:vpc/vpc-0e5f7ae1da33ba8b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0de33af8f9136cc79",
            "default_route_table_id": "rtb-0e64cb2a46f26d5e4",
            "default_security_group_id": "sg-089342bb5d6f13d37",
            "dhcp_options_id": "dopt-0b8b9cb666c54e457",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e5f7ae1da33ba8b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e64cb2a46f26d5e4",
            "owner_id": "772693223288",
            "tags": {
              "Name": "tokyo-vpc"
            },
            "tags_all": {
              "Name": "tokyo-vpc"
            }
          }
        }
      ]
    }
  ]
}